# raytracer

./: .gitignore  Cargo.toml  README.md  material.mtl  ray.rs  strip.sh
benches/: benchmark.rs
libraytracing/: Cargo.toml
libraytracing/src/: error.rs  helpers.rs  intersection.rs  lib.rs  obj.rs  ray.rs
libraytracing/src/camera/: equilinear_camera.rs  equirectangular_camera.rs  mod.rs
libraytracing/src/shader/: additive_shader.rs  ambient_shader.rs  chess_shader.rs  diffuse_shader.rs  mirror_shader.rs  mod.rs  monochrome_shader.rs  multiplicative_shader.rs  specular_shader.rs
libraytracing/src/storage/: bv_storage.rs  collector.rs  mod.rs  primitive_storage.rs
libraytracing/src/world/: light.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
slides/: .latexmkrc  fix_pnotes.sh  makefile  slides.md  slides.tex
src/: error.rs  helpers.rs  intersection.rs  main.rs  obj.rs  ray.rs
src/camera/: equilinear_camera.rs  equirectangular_camera.rs  mod.rs
src/shader/: additive_shader.rs  ambient_shader.rs  chess_shader.rs  diffuse_shader.rs  mirror_shader.rs  mod.rs  monochrome_shader.rs  multiplicative_shader.rs  specular_shader.rs
src/storage/: BVStorage.rs  Collector.rs  PrimitiveStorage.rs  bv_storage.rs  collector.rs  mod.rs  primitive_storage.rs
src/world/: camera.rs  light.rs  mod.rs  obj.rs  plane.rs  sphere.rs  triangle.rs
