[package]
name = "raytracing"
version = "0.1.0"
authors = ["Carl Schwan <schwancarl@protonmail.com>"]
edition = "2018"

[dependencies]
wavefront_obj = "5.1.0"
image = { git = "https://gitlab.com/ognarb/image.git" }
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"

[dependencies.nalgebra]
version = "0.16.13"
features = ["serde-serialize"]
