# Copyright © 2019
# Sami Shalayel <sami.shalayel@tutamail.com>,
# Carl Schwan <carl@carlschwan.eu>,
# Daniel Freiermuth <d_freiermu14@cs.uni-kl.de>
#
# This work is free. You can redistribute it and/or modify it under the
# terms of the Do What The Fuck You Want To Public License, Version 2,
# as published by Sam Hocevar. See the LICENSE file for more details.
# 
# This program is free software. It comes without any warranty, to
# the extent permitted by applicable law. You can redistribute it
# and/or modify it under the terms of the Do What The Fuck You Want
# To Public License, Version 2, as published by Sam Hocevar. See the LICENSE
# file for more details.

[package]
name = "libraytracing"
version = "0.1.0"
edition = "2018"

[lib]
name = "libraytracing"

[dependencies]
image = "*"
wavefront_obj = { git = "https://gitlab.com/ognarb/wavefront_obj.git" }
nalgebra = "0.16.12"
indicatif = "0.11.0"
